Introdução a utilização de API externa. Não finalizado.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.schema-management.strategy=drop-and-create
 %dev.quarkus.datasource.dev-ui.allow-sql=true
 quarkus.hibernate-orm.sql-load-script=cars.sql
+
+#API Client
+quarkus.rest-client."externalAPI.FipeAPIInterfaceClient".url=https://fipe.parallelum.com.br/api/v2/cars/brands/59/models/5940/years/2014-3
