--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.schema-management.strategy=drop-and-create
 %dev.quarkus.datasource.dev-ui.allow-sql=true
 quarkus.hibernate-orm.sql-load-script=cars.sql
+
+#API
+quarkus.rest-client.fipe-api.url=https://fipe.parallelum.com.br
+
+#Swagger
+mp.openapi.scan.exclude.packages=externalAPI.controller
