task: refatora o backend e cria validação para o endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ quarkus.datasource.jdbc.url=jdbc:h2:mem:ada-movies;DB_CLOSE_DELAY=-1
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.schema-management.strategy=drop-and-create
 %dev.quarkus.datasource.dev-ui.allow-sql=true
-quarkus.hibernate-orm.sql-load-script=cars.sql
+# quarkus.hibernate-orm.sql-load-script=cars.sql
 
 #API
 quarkus.rest-client.fipe-api.url=https://fipe.parallelum.com.br
